# esp32-s3-rust-axum-example

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs  server.rs
