[package]
name = "esp32axum"
version = "0.0.1"
authors = ["Gábor Gyebnár <korteur@gmail.com>"]
edition = "2021"

[dependencies]
async-nats = { version = "0.38", default-features = false, features = [
    "aws-lc-rs",
] }
aws-lc-rs = { version = "1.12.4", features = ["bindgen"] }
aws-lc-fips-sys = { version = "0.12.10", features = ["bindgen"] }
aws-lc-sys = { version = "0.26.0", features = ["bindgen"] }
panic-halt = "0"
anyhow = "1"
heapless = "0.8.0"
embedded-hal = "1"
embedded-svc = { version = "0", features = ["experimental"] }
esp-idf-sys = { version = "0", features = ["binstart"] }
esp-idf-svc = { version = "0", features = ["alloc", "experimental"] }
esp-idf-hal = "0"
log = "0"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = [
    "rt",
    "net",
    "io-util",
    "macros",
    "time",
    "sync",
] }

[build-dependencies]
build-data = "0"
embuild = "0"
anyhow = "1"

[profile.release]
debug = false
opt-level = "s"
#lto = "fat"
strip = true
panic = "abort"

[profile.dev]
debug = true
opt-level = 2
lto = "off"

[package.metadata.espflash]
partition_table = "./partitions.csv"
